# order_service

./: .env.example  .gitignore  Dockerfile  alembic.ini  dependency.py  main.py  ord-api.yaml  pyproject.toml
api/: __init__.py  cart.py  health.py  management.py  orders.py
api/v1/: __init__.py
core/: config.py  database.py  security.py
migrations/: env.py
migrations/versions/: be9c9626306f_init_migration_for_order.py
models/: __init__.py  cart.py  order.py
repositories/: cart.py  order.py
rpc/: catalog_client.py  server.py
rpc/proto/: order_query.proto
schemas/: README.md  cart.py  management.py  order.py
services/: cart.py  management.py  order.py
tests/: conftest.py  test_cart.py  test_management.py  test_orders.py
