[project]
name = "order-service"
version = "1.0.0"
description = "Order service"
readme = "schemas/README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<0.116.0",
  "uvicorn[standard]>=0.32.0,<0.33.0",
  "sqlalchemy[asyncio]>=2.0.35,<2.1.0",
  "asyncpg>=0.30.0,<0.31.0",
  "alembic>=1.13.0,<1.14.0",
  "pydantic>=2.9.0,<3.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<0.25.0",
  "httpx>=0.27.0,<0.28.0",
  "ruff>=0.7.0,<0.8.0",
  "aiosqlite>=0.20.0,<0.21.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
indent-width = 2
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"migrations/versions/*.py" = ["E501"]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
  "api",
  "core",
  "models",
  "repositories",
  "schemas",
  "services",
  "dependency.py",
  "main.py",
]
